--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-
-    <P>Hej</P>
-
     <div class="Rubrik"> Webbens Historia </div>
-    <div></div>
+    <div class = "TextRuta1">
+        <p class = "Text1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere corrupti nihil incidunt consequuntur minus odit sint hic non necessitatibus, atque voluptas itaque, sequi neque sapiente. Accusamus unde recusandae dignissimos rerum!</p>
+    </div>
+    <div class = "Info">
 
-
+    </div>
 </body>
 </html>
