--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <div class="Topbar"></div>
 
-    <div class="inldening"></div>
+    <div class = "inledning">
+        <div class="textRuta">
+            <p class="text1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At quia, pariatur veniam non eius, labore nam eligendi laboriosam maiores voluptates         doloribus magnam, iste dolor asperiores vel expedita repellendus? Vero, ad?</p>
+        </div>
 
-    <div class="info"></div>
+        <div class="infoRuta">
+            
+        </div>
+    </div>
 
     <div class="huvuddelen"></div>
 </body>
