--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wikipedia</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <div class="Topbar">
+
+            <img class="logo" src="img/logo1.png" alt="">
 
 
     </div>
