--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wikipedia</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <div class="Topbar">
+
+            <img class="logo" src="img/logo1.png" alt="">
 
 
     </div>
@@ -16,7 +18,7 @@
 
     <div class = "inledning">
         <div class="textRuta">
-            <p class="text1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At quia, pariatur veniam non eius, labore nam eligendi laboriosam maiores voluptates         doloribus magnam, iste dolor asperiores vel expedita repellendus? Vero, ad?</p>
+            <p class="text1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At quia, pariatur veniam non eius, labore nam eligendi laboriosam maiores voluptates         doloribus magnam, iste dolor asperiores vel expedita repellendus? Vero, ad? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam ratione excepturi quasi amet nam doloribus eveniet mollitia nulla debitis repellendus error, facere assumenda voluptate nobis sapiente eligendi necessitatibus est eaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni asperiores, impedit earum labore similique nihil nemo quaerat accusantium consequuntur laudantium delectus qui odio tenetur aspernatur, ut id mollitia accusamus incidunt. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat quas non iure cupiditate fugit quia optio porro dignissimos ea. Cupiditate fugiat quae atque, eligendi iste consequatur saepe? Cumque, ullam provident!</p>
         </div>
 
         <div class="infoRuta">
