--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,20 +10,26 @@
     
     <div class="Topbar">
 
-            <img class="logo" src="img/logo1.png" alt="">
-
 
     </div>
 
 
     <div class = "inledning">
         <div class="textRuta">
-            <p class="text1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At quia, pariatur veniam non eius, labore nam eligendi laboriosam maiores voluptates         doloribus magnam, iste dolor asperiores vel expedita repellendus? Vero, ad? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam ratione excepturi quasi amet nam doloribus eveniet mollitia nulla debitis repellendus error, facere assumenda voluptate nobis sapiente eligendi necessitatibus est eaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni asperiores, impedit earum labore similique nihil nemo quaerat accusantium consequuntur laudantium delectus qui odio tenetur aspernatur, ut id mollitia accusamus incidunt. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat quas non iure cupiditate fugit quia optio porro dignissimos ea. Cupiditate fugiat quae atque, eligendi iste consequatur saepe? Cumque, ullam provident!</p>
+            <p class="text1">En webbplats är som ett textdokument som du kan skriva i, du kan även lägga in olika typer av media som bilder eller filmer. Dessa sidor ligger sedan lagrade på olika webbserverar och kan nås med hjälp av en webbläsare. Webbläsaren är ett datorprogram och det finns många olika, de vanligaste är Google Chrome, Microsoft Edge, Safari, Internet Explorer och så vidare. <br><br>Hela världen har tillgång till webben så länge ditt land tillåter dig och detta är möjligt på grund av förtaget world wide web (www) som jobbar med just det, att göra webbplatser åtkomliga via Internet.</p>
         </div>
 
         <div class="infoRuta">
+            <img class = "infoBild" src="img/Världens Första Hemsida (Bild).avif" alt="Bild på världens första hemsida">
+            <p class = "datum">Skapades: 1990/12/20</p>
+            <p class = publicerad>Publicerad: 1991/08/06</p>
+            <p class = "skapare">Skapare: Tim Berners-Lee</p>
             
         </div>
+    </div>
+
+    <div class = "webbensHistoria">
+        <p class = "förstaWebbplatsen">Den första hemsidan skapades av World Wide Web <a href="http://info.cern.ch/">http://info.cern.ch/</a>, den skapades den 20 december 1990. I ungefär 8 månader var hemsidan privat innan de publicerades den 6 augusti 1991. <br><br>År 1993 släpptes rättigheterna till webben ut till allmänheten. Det spred sig väldigt fort runt över hela världen och alla skapade sina egna webbplatser.</p>
     </div>
 
     <div class="huvuddelen"></div>
