--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class = "webbensHistoria">
-        <p class = "förstaWebbplatsen">Den första hemsidan skapades av World Wide Web <a href="http://info.cern.ch/">http://info.cern.ch/</a>, den skapades den 20 december 1990. I ungefär 8 månader var hemsidan privat innan de publicerades den 6 augusti 1991. <br><br>År 1993 släpptes rättigheterna till webben ut till allmänheten. Det spred sig väldigt fort runt över hela världen och alla skapade sina egna webbplatser.</p>
+        <p class = "webbensHistoria">Den första hemsidan skapades av World Wide Web <a href="http://info.cern.ch/">http://info.cern.ch/</a>, den skapades den 20 december 1990. I ungefär 8 månader var hemsidan privat innan de publicerades den 6 augusti 1991. <br><br>År 1993 släpptes rättigheterna till webben ut till allmänheten. Det spred sig väldigt fort runt över hela världen och alla skapade sina egna webbplatser.</p>
     </div>
 
     <div class="huvuddelen"></div>
