--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@
             <p class = "datum">Skapades: 1990/12/20</p>
             <p class = publicerad>Publicerad: 1991/08/06</p>
             <p class = "skapare">Skapare: Tim Berners-Lee</p>
-            
         </div>
+
+        <div>
+            <h1 class = "rubrikWebbensHistoria">Webbens Historia</h1>
+            <p class = "webbensHistoria">Den <a href="http://info.cern.ch/">första hemsidan</a> skapades av World Wide Web, den skapades den 20 december 1990. I ungefär 8 månader var hemsidan privat innan de publicerades den 6 augusti 1991. <br><br>År 1993 släpptes rättigheterna till webben ut till allmänheten. Det spred sig väldigt fort runt över hela världen och alla skapade sina egna webbplatser.</p>
+        </div>
+
     </div>
 
-    <div class = "webbensHistoria">
-        <p class = "webbensHistoria">Den första hemsidan skapades av World Wide Web <a href="http://info.cern.ch/">http://info.cern.ch/</a>, den skapades den 20 december 1990. I ungefär 8 månader var hemsidan privat innan de publicerades den 6 augusti 1991. <br><br>År 1993 släpptes rättigheterna till webben ut till allmänheten. Det spred sig väldigt fort runt över hela världen och alla skapade sina egna webbplatser.</p>
-    </div>
+    
 
     <div class="huvuddelen"></div>
 </body>
