--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 
     </div>
 
-
+    
     <div class = "inledning">
         <div class="textRuta">
+            <h1>Vad är en Webbplats</h1>
             <p class="text1">En webbplats är som ett textdokument som du kan skriva i, du kan även lägga in olika typer av media som bilder eller filmer. Dessa sidor ligger sedan lagrade på olika webbserverar och kan nås med hjälp av en webbläsare. Webbläsaren är ett datorprogram och det finns många olika, de vanligaste är Google Chrome, Microsoft Edge, Safari, Internet Explorer och så vidare. <br><br>Hela världen har tillgång till webben så länge ditt land tillåter dig och detta är möjligt på grund av förtaget world wide web (www) som jobbar med just det, att göra webbplatser åtkomliga via Internet.</p>
         </div>
 
@@ -40,13 +41,23 @@
     </div>
 
     <div class = "webbensHistoria">
+
+        <h1>Webbens Historia</h1>
         <p class = "förstaWebbplatsen"> 
-Det första företaget som skapade en hemsida och kunde dela den över hela världen på ett enkelt sätt var World Wide Web (WWW). Innan World Wide Web fanns det knappt något system som enkelt kunde koppla och dela sina saker.
-World Wide Webs skapare Tim Berners-Lee skapade WWW 1990. Hans verk består av tre delar. Den första delen är en Webbläsare. En webbläsare är ett program som kan läsa in och visa sidor, till exempel:  Google Chrome, Microsoft Edge eller Firefox. Andra delen är HTML. HTML är kort för HyperText Markup Language och det används än idag för att bygga upp hemsidor. HTML är byggt så att en webbläsare ska kunna tolka vad en rubrik, ett textstycke, en bild och en länk är, det finns även andra funktioner men dessa är de mest grundläggande. Den tredje delen är http-protokollet. Http-protokollet är ett regelverk som bestämmer hur innehållet på en webbsida ska föras över, så att webbläsare och webbservrar kan förstå varandra.
-Den första webbsidan skapades den 20 december 1990 och publicerades den 6 augusti 1991. Denna webbsida finns fortfarande kvar och finns på denna länk: <a href="http://info.cern.ch/">http://info.cern.ch/</a>. Två år senare släpptes rättigheterna till webben. Webbens spridning tog fart och spred sig över hela världen.
-</p>
+            Det första företaget som skapade en hemsida och kunde dela den över hela världen på ett enkelt sätt var World Wide Web (WWW). Innan World Wide Web fanns det knappt något system som enkelt kunde koppla och dela sina saker.
+            World Wide Webs skapare Tim Berners-Lee skapade WWW 1990. Hans verk består av tre delar. Den första delen är en Webbläsare. En webbläsare är ett program som kan läsa in och visa sidor, till exempel:  Google Chrome, Microsoft Edge eller Firefox. Andra delen är HTML. HTML är kort för HyperText Markup Language och det används än idag för att bygga upp hemsidor. HTML är byggt så att en webbläsare ska kunna tolka vad en rubrik, ett textstycke, en bild och en länk är, det finns även andra funktioner men dessa är de mest grundläggande. Den tredje delen är http-protokollet. Http-protokollet är ett regelverk som bestämmer hur innehållet på en webbsida ska föras över, så att webbläsare och webbservrar kan förstå varandra.
+            Den första webbsidan skapades den 20 december 1990 och publicerades den 6 augusti 1991. Denna webbsida finns fortfarande kvar och finns på denna länk: <a href="http://info.cern.ch/">http://info.cern.ch/</a>. Två år senare släpptes rättigheterna till webben. Webbens spridning tog fart och spred sig över hela världen.
+        </p>
     </div>
 
-    <div class="huvuddelen"></div>
+    <div class = "viktigaTeknologier">
+            <h1>Andra Viktiga Teknologier</h1>
+            <p>TLS (Transport Layer Security) är ett system för säkert utbyte av krypterad information mellan olika datorer.</p>
+            <p>DNS (Domain Name System)  är ett system som ger en webbplats ett faktiskt namn som adress istället för en lång rad siffror.</p>
+            <p>CSS (Cascading Style Sheets) är ett språk som ger dig möjlighet att ge din hemsida en design, till exempel typsnitt, textstorlek eller färg.</p>
+            <p>SEO (Search Engine Optimization) är ett samlingsnamn för olika metoder som gör att du hamnar högt upp på sökresultat.</p>
+            <p>Web Cache är ett system som optimerar WWW (World Wide Web). Det kan göra att du får mindre delay när du surfar på webben.</p>
+            <p>Copyright finns för att en skapare av ett verk ska ha ensamrätt att bestämma exakt vad som ska hända med verket och att ingen annan har rätt att sno det.</p>
+    </div>
 </body>
 </html>
