--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <p>SEO (Search Engine Optimization) är ett samlingsnamn för olika metoder som gör att du hamnar högt upp på sökresultat.</p>
             <p>Web Cache är ett system som optimerar WWW (World Wide Web). Det kan göra att du får mindre delay när du surfar på webben.</p>
             <p>Copyright finns för att en skapare av ett verk ska ha ensamrätt att bestämma exakt vad som ska hända med verket och att ingen annan har rätt att sno det.</p>
+            <p> <a href="teknologier.html">Mer information</a> </p>
     </div>
 </body>
 </html>
