--- a/index.html
+++ b/index.html
@@ -46,17 +46,32 @@
         <p class = "förstaWebbplatsen"> 
             Det första företaget som skapade en hemsida och kunde dela den över hela världen på ett enkelt sätt var World Wide Web (WWW). Innan World Wide Web fanns det knappt något system som enkelt kunde koppla och dela sina saker.
             World Wide Webs skapare Tim Berners-Lee skapade WWW 1990. Hans verk består av tre delar. Den första delen är en Webbläsare. En webbläsare är ett program som kan läsa in och visa sidor, till exempel:  Google Chrome, Microsoft Edge eller Firefox. Andra delen är HTML. HTML är kort för HyperText Markup Language och det används än idag för att bygga upp hemsidor. HTML är byggt så att en webbläsare ska kunna tolka vad en rubrik, ett textstycke, en bild och en länk är, det finns även andra funktioner men dessa är de mest grundläggande. Den tredje delen är http-protokollet. Http-protokollet är ett regelverk som bestämmer hur innehållet på en webbsida ska föras över, så att webbläsare och webbservrar kan förstå varandra.
-            Den första webbsidan skapades den 20 december 1990 och publicerades den 6 augusti 1991. Denna webbsida finns fortfarande kvar och finns på denna länk: <a href="http://info.cern.ch/">http://info.cern.ch/</a>. Två år senare släpptes rättigheterna till webben. Webbens spridning tog fart och spred sig över hela världen.
+            Den första webbsidan skapades den 20 december 1990 och publicerades den 6 augusti 1991. Denna webbsida finns fortfarande kvar och finns på denna länk: <a href="http://info.cern.ch/">http://info.cern.ch/</a>. Två år senare släpptes rättigheterna till webben. Webbens spridning tog fart och spred sig över hela världen. <br><br>
         </p>
+        <h1>Webbutvecklingen</h1>
+        <p class = "webbutvecklingen">De första hemsidorna bestod endast av text och länkar, det var inget interaktivt som att skriva eller trycka på knappar. År 1995 publicerades JavaScript och det gjorde det möjligt att göra lite mer avancerade funktioner som till exempel trycka på knappar, animationer och så vidare. 
+        <br> <br>    
+        Året efter (1996) lanserades CSS (Cascading Style Sheets). CSS är väldigt användbart när det kommer till att göra din hemsida fin. CSS ger dig alternativ för att anpassa olika saker som till exempel färg eller textstorlek.
+        <br><br>
+        Vid den tiden användes hemsidor mycket för privata bruk, folk hade till exempel en hemsida om sig själva som folk kunde gå in och läsa på. Med tiden blev detta allt mer ovanligt eftersom vi fick våra första sociala medier, Facebook (2004), YouTube (2005). Med dessa sociala medier upptäckte folk att det var enklare att skriva saker om sig själva på någon annans hemsida istället för sin egen och hemsidor blev mer använt av företag som ville ha all information samlad på ett ställe.
+</p>
+
+        <p class = "webbensUtveckling"></p>
     </div>
 
     <div class = "viktigaTeknologier">
             <h1>Andra Viktiga Teknologier</h1>
+
             <p>TLS (Transport Layer Security) är ett system för säkert utbyte av krypterad information mellan olika datorer.</p>
+
             <p>DNS (Domain Name System)  är ett system som ger en webbplats ett faktiskt namn som adress istället för en lång rad siffror.</p>
+
             <p>CSS (Cascading Style Sheets) är ett språk som ger dig möjlighet att ge din hemsida en design, till exempel typsnitt, textstorlek eller färg.</p>
+
             <p>SEO (Search Engine Optimization) är ett samlingsnamn för olika metoder som gör att du hamnar högt upp på sökresultat.</p>
+
             <p>Web Cache är ett system som optimerar WWW (World Wide Web). Det kan göra att du får mindre delay när du surfar på webben.</p>
+
             <p>Copyright finns för att en skapare av ett verk ska ha ensamrätt att bestämma exakt vad som ska hända med verket och att ingen annan har rätt att sno det.</p>
     </div>
 </body>
