--- a/teknologier.html
+++ b/teknologier.html
@@ -10,16 +10,22 @@
 <body>
 
     <div class="info">
-        <p>
-            HTTP och HTTPS
-HTTP skapades i början av 1990-talet när internet började användas utanför militär och forskning. Målet var att göra det möjligt för olika datorer att enkelt dela information. HTTP är alltså ett gemensamt sätt för webbläsare och webbservrar att kommunicera.
-När en användare skriver in en webbadress i webbläsaren skickas en HTTP-förfrågan till servern där webbsidan finns. Servern svarar då genom att skicka tillbaka innehållet på sidan, till exempel text, bilder och länkar. HTTP fungerar som tydliga regler för hur denna information ska skickas och tas emot.
-Ett stort problem med HTTP var att informationen skickades i klartext. Det betydde att om någon avlyssnade trafiken kunde de läsa allt som skickades, till exempel lösenord. När internet började användas mer av vanliga människor och företag blev detta en stor säkerhetsrisk.
-För att lösa detta skapades HTTPS, där bokstaven S står för ”secure”. HTTPS började användas mer under slutet av 1990-talet och början av 2000-talet. Den stora skillnaden är att informationen skyddas genom kryptering, vilket gör den svår att läsa för obehöriga.
-Idag används HTTPS på nästan alla webbplatser. Det har gjort internet tryggare och gjort det möjligt att använda tjänster som internetbank, sociala medier och nätbutiker på ett säkert sätt.
-
+        <h2> HTTP/HTTPS</h2>
+        <p>HTTP skapades i början av 1990-talet när internet började användas utanför militär och forskning. Målet var att göra det möjligt för olika datorer att enkelt dela information. HTTP är alltså ett gemensamt sätt för webbläsare och webbservrar att kommunicera.
+            När en användare skriver in en webbadress i webbläsaren skickas en HTTP-förfrågan till servern där webbsidan finns. Servern svarar då genom att skicka tillbaka innehållet på sidan, till exempel text, bilder och länkar. HTTP fungerar som tydliga regler för hur denna information ska skickas och tas emot.
+            Ett stort problem med HTTP var att informationen skickades i klartext. Det betydde att om någon avlyssnade trafiken kunde de läsa allt som skickades, till exempel lösenord. När internet började användas mer av vanliga människor och företag blev detta en stor säkerhetsrisk.
+            För att lösa detta skapades HTTPS, där bokstaven S står för ”secure”. HTTPS började användas mer under slutet av 1990-talet och början av 2000-talet. Den stora skillnaden är att informationen skyddas genom kryptering, vilket gör den svår att läsa för obehöriga.
+            Idag används HTTPS på nästan alla webbplatser. Det har gjort internet tryggare och gjort det möjligt att använda tjänster som internetbank, sociala medier och nätbutiker på ett säkert sätt.
         </p>
     </div>
+
+    <div class="info" id="sslinfo"> 
+        <h2>SSL/TLS</h2>
+        <p>SSL/TLS skapades i mitten av 1990-talet när internet började användas för inloggningar, handel och andra tjänster som krävde säkerhet. Man insåg då att information som skickades över nätet behövde skyddas. SSL, och senare den förbättrade versionen TLS, används för att kryptera information mellan webbläsaren och webbservern. Kryptering betyder att informationen görs oläslig för obehöriga, även om någon skulle försöka avlyssna trafiken. När du besöker en webbplats som använder HTTPS startar SSL/TLS automatiskt och skapar en säker anslutning där både användaren och servern kontrolleras. Idag är det främst TLS som används, men man säger ofta SSL ändå. Denna teknik har varit avgörande för att människor ska våga använda internet för betalningar, inloggningar och personliga uppgifter.   
+        </p>
+
+    </div>
+
 
     <a href="index.html"> Tillbaka</a>
     
