--- a/teknologier.html
+++ b/teknologier.html
@@ -23,7 +23,11 @@
         <h2>SSL/TLS</h2>
         <p>SSL/TLS skapades i mitten av 1990-talet när internet började användas för inloggningar, handel och andra tjänster som krävde säkerhet. Man insåg då att information som skickades över nätet behövde skyddas. SSL, och senare den förbättrade versionen TLS, används för att kryptera information mellan webbläsaren och webbservern. Kryptering betyder att informationen görs oläslig för obehöriga, även om någon skulle försöka avlyssna trafiken. När du besöker en webbplats som använder HTTPS startar SSL/TLS automatiskt och skapar en säker anslutning där både användaren och servern kontrolleras. Idag är det främst TLS som används, men man säger ofta SSL ändå. Denna teknik har varit avgörande för att människor ska våga använda internet för betalningar, inloggningar och personliga uppgifter.   
         </p>
-
+        
+        <h2><br>Web Cache</h2>
+        <p></p>
+        <h2><br>Copyright</h2>
+        <p></p>
     </div>
 
 
