--- a/teknologier.html
+++ b/teknologier.html
@@ -26,6 +26,33 @@
 
     </div>
 
+    <div class="info" id="htmlinfo">
+        <h2> </h2>
+        <p> </p>
+    </div>
+
+    <div class="info" id="cssinfo">
+        <h2> </h2>
+        <p> </p>
+    </div>
+
+    <div class="info" id="cachninginfo">
+        <h2> </h2>
+        <p> </p>
+    </div>
+
+    <div class="info" id="seoinfo">
+        <h2> </h2>
+        <p> </p>
+    </div>
+
+    <div class="info" id="datainfo">
+        <h2> </h2>
+        <p> </p>
+    </div>
+
+ 
+
 
     <a href="index.html"> Tillbaka</a>
     
