--- a/teknologier.html
+++ b/teknologier.html
@@ -28,16 +28,6 @@
         
     </div>
 
-    <div class="info" id="webCacheInfo"> 
-        <h2>Web Cache</h2>
-        <p></p>
-    </div>
-    
-    <div class="info" id="copyrightInfo"> 
-        <h2>Copyright</h2>
-        <p></p>
-    </div>
-
     <div class="info" id="htmlinfo">
         <h2> </h2>
         <p> </p>
@@ -49,7 +39,14 @@
     </div>
 
     <div class="info" id="cachninginfo">
-        <h2> </h2>
+        <h2>Web Cache</h2>
+        <p>Web Cache är ett system som är till för att optimisera World Wide Web. Den funkar på det sättet att den finns på både Clienten och servern vilket tillåter den minska delayen när man söker på webben. <br> 
+        Det finns två andra typer av cache som kalls ”Forward Cache” och ”Reverse Cache”. Forward Cache är en cache som ligger utanför serverns nätverk, det vill säga att den ligger på en proxy server som finns i mellan clienten och servern. Forward Cachen samlar information och utvärderar ifall något innehåll borde lagras. <br>
+        Reverse Cache finns framför en eller flera serverar och tar in massa förfrågningar från internetet och drar ner på serverloaden.</p>
+    </div>
+
+    <div class ="info" id = "copyrightInfo">
+        <h2>Copyright</h2>
         <p> </p>
     </div>
 
