--- a/index.html
+++ b/index.html
@@ -77,5 +77,7 @@
             <p>Copyright finns för att en skapare av ett verk ska ha ensamrätt att bestämma exakt vad som ska hända med verket och att ingen annan har rätt att sno det.</p>
             <p> <a href="teknologier.html">Mer information</a> </p>
     </div>
+
+    <a class="länkTillProgramering" href="programering/programmering.html"><h1>Programeringens och AIs Historia</h1></a>
 </body>
 </html>
