--- a/teknologier.html
+++ b/teknologier.html
@@ -56,7 +56,8 @@
 
     <div class ="info" id = "copyrightInfo">
         <h2>Copyright</h2>
-        <p> </p>
+        <p>Copyright eller upphovsrätt som det kallas på svenska är ett system som skapats för att skydda kreatörers verk. Copyright är till för att en skapare av ett specifikt verk ska äga sitt verk och få göra vad den vill med det och ingen ska kunna sno det utan att bli straffad. </p>
+    </div></p>
     </div>
 
     <div class="info" id="seoinfo">
