--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p>Web Cache är ett system som optimerar WWW (World Wide Web). Det kan göra att du får mindre delay när du surfar på webben.</p>
 
             <p>Copyright finns för att en skapare av ett verk ska ha ensamrätt att bestämma exakt vad som ska hända med verket och att ingen annan har rätt att sno det.</p>
-            <p> <a href="teknologier.html">Mer information</a> </p>
+            <p> <a class="länken" href="teknologier.html">Mer information</a> </p>
     </div>
 
     <a class="länkTillProgramering" href="programering/programmering.html"><h1>Programeringens och AIs Historia</h1></a>
