--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
             <p> <a href="teknologier.html">Mer information</a> </p>
     </div>
 
-    <a class="länkTillProgramering" href="programering/programmering.html"><h1>Programeringens och AIs Historia</h1></a>
+    <a class="länkTillProgramering" href="programmering.html"><h1>Programeringens och AIs Historia</h1></a>
 </body>
 </html>
