--- a/programmering.html
+++ b/programmering.html
@@ -7,30 +7,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class=" ProgrammeringsHistoria">
-        <h1>Programemeringens historia</h1>
-        <p>Första spåret av programering var på 1800-talet när Ada Lovelace skapade den första algoritmen för en maskin. De första moderna datorerna kom inte förrän 1950-talet och då nästan bara ingenjörer och matematiker som kunde hantera datorerna då det krävdes en djupare förståelse för att kunna ge exakta kommandon med assemblyspråk. Nästa årtionde kom de nya programmeringspråken men var fortfarande avancerad. Framåt 70- och 80-talet utvecklades programmeringen mer så att vem som helst skulle kunna använda datorn utan att behöva förstå och hantera programmering. </p>
-    </div>
+    <main>
+        <article class=" ProgrammeringsHistoria">
+            <h1>Programemeringens historia</h1>
+            <p>Första spåret av programering var på 1800-talet när Ada Lovelace skapade den första algoritmen för en maskin. De första moderna datorerna kom inte förrän 1950-talet och då nästan bara ingenjörer och matematiker som kunde hantera datorerna då det krävdes en djupare förståelse för att kunna ge exakta kommandon med assemblyspråk. Nästa årtionde kom de nya programmeringspråken men var fortfarande avancerad. Framåt 70- och 80-talet utvecklades programmeringen mer så att vem som helst skulle kunna använda datorn utan att behöva förstå och hantera programmering. </p>
+        </article>
 
-    <div class="Ada">
-        <img src="img/1-28f2208c.png" alt="">
-        <p>Ada Lovelace</p>
-        <p>Skapare av världens första algoritm</p>
-    </div>
+        <section class="Ada">
+            <img src="img/1-28f2208c.png" alt="">
+            <p>Ada Lovelace</p>
+            <p>Skapare av världens första algoritm</p>
+        </section>
 
 
-    <div class = "AIHistoria">
-        <h1>AI Historia</h1>
-        <p>AI Historia
-        AI (Artificiell Intelligens) är något som får datorer och robotar att efterlikna människors tänkande. År 1950 fanns det en man som hette Alan Turing, han ställde frågan ”Kan maskiner tänka?”. Denna fråga inspirerade en grupp forskare att börja tänka på ifall det var möjligt att bygga en elektronisk hjärna. <br><br>
-        Sex år senare (1956) Började forskarna och deras elever bygga datorprogram som kunde lösa bland annat ordproblem i algebra. Detta var något som var helt otroligt för de flesta människorna. På den tiden sa de att inom 20 år kommer AI kunna utföra alla människojobb vilket nu i efterhand låter lite knasigt men de var väldigt optimistiska. <br><br>
-        20 år senare när det var tänkt att AI skulle vara på toppen och ersätta alla jobb befann sig i stället AI i en så kallad AI-Vinter. All grundforskning om AI avbröts av de amerikanska och brittiska regeringarna på grund av påtryckningar från den amerikanska kongressen om att finansiera mer produktiva projekt. <br><br>
-        Cirka 10 år senare (I början av 1980-talet) gjorde AI en liten tillfällig comeback då den kommersiella framgången för expertsystem, en form av AI-program som kunde simulera kunskaper med mera av människor. År 1985 hade Japan utvecklat sin femte generations datorprojekt och det inspirerade de amerikanska och brittiska regeringarna att sätta igång finansieringen av AI forskningen igen. Samtidigt hade marknaden för AI växt enormt och nått över en miljard dollar. <br><br>
-        Vid 1990-talet kom den äldre typen av AI tillbaks och hade stora framgångar. Då användes AI för logistik, medicinsk diagnos, databrytning och mycket mer. År 1997 kom den första datorn som besegrade en schack världsmästare vilket var en väldigt häftig sak. <br><br>
-        Om vi hoppar fram till nutid (2020-talet) Har AI utvecklats enormt. Vi har under 2010-talet sett många AI robotar som till exempel kan spela olika sporter som fotboll, golf eller pingis och lär sig utifrån de spelare de möter men inte så mycket annat som allmänheten kunde använda sig av. Under de senaste åren har program som ChatGPT eller Google Gemini utvecklats och släpptes till allmänheten. Dessa program fungerar som en chatt med en människa och du får svar på allt du vill instant. Problemet med dessa program är att ifall de inte än har fått den frågan som du ställt till den och den inte vet vad den ska svara hittar den på något som är liknande och detta kan leda till falsk information. <br><br>
-        Under de två senaste åren (2023-2025) har även AI-videor utvecklats extremt. För bara två år sedan kunde man se väldigt tydligt om en video var AI generad, nu för tiden finns det AI videor som ibland är väldigt svårt att se att den är genererad om man bara kollar på hur videon ser ut. Självklart kan man förstå om en video är AI generad genom att tänka logiskt och höra hur en person låter eller vad den säger men tanken på att det utvecklats så mycket under de två senaste åren är lite otäckt. Tänk om 10 år, då kommer kanske inte övervakningskameror vara till någon nytta då brottslingar kan skylla på AI.
+        <article class = "AIHistoria">
+            <h1>AI Historia</h1>
+            <p>AI Historia
+            AI (Artificiell Intelligens) är något som får datorer och robotar att efterlikna människors tänkande. År 1950 fanns det en man som hette Alan Turing, han ställde frågan ”Kan maskiner tänka?”. Denna fråga inspirerade en grupp forskare att börja tänka på ifall det var möjligt att bygga en elektronisk hjärna. <br><br>
+            Sex år senare (1956) Började forskarna och deras elever bygga datorprogram som kunde lösa bland annat ordproblem i algebra. Detta var något som var helt otroligt för de flesta människorna. På den tiden sa de att inom 20 år kommer AI kunna utföra alla människojobb vilket nu i efterhand låter lite knasigt men de var väldigt optimistiska. <br><br>
+            20 år senare när det var tänkt att AI skulle vara på toppen och ersätta alla jobb befann sig i stället AI i en så kallad AI-Vinter. All grundforskning om AI avbröts av de amerikanska och brittiska regeringarna på grund av påtryckningar från den amerikanska kongressen om att finansiera mer produktiva projekt. <br><br>
+            Cirka 10 år senare (I början av 1980-talet) gjorde AI en liten tillfällig comeback då den kommersiella framgången för expertsystem, en form av AI-program som kunde simulera kunskaper med mera av människor. År 1985 hade Japan utvecklat sin femte generations datorprojekt och det inspirerade de amerikanska och brittiska regeringarna att sätta igång finansieringen av AI forskningen igen. Samtidigt hade marknaden för AI växt enormt och nått över en miljard dollar. <br><br>
+            Vid 1990-talet kom den äldre typen av AI tillbaks och hade stora framgångar. Då användes AI för logistik, medicinsk diagnos, databrytning och mycket mer. År 1997 kom den första datorn som besegrade en schack världsmästare vilket var en väldigt häftig sak. <br><br>
+            Om vi hoppar fram till nutid (2020-talet) Har AI utvecklats enormt. Vi har under 2010-talet sett många AI robotar som till exempel kan spela olika sporter som fotboll, golf eller pingis och lär sig utifrån de spelare de möter men inte så mycket annat som allmänheten kunde använda sig av. Under de senaste åren har program som ChatGPT eller Google Gemini utvecklats och släpptes till allmänheten. Dessa program fungerar som en chatt med en människa och du får svar på allt du vill instant. Problemet med dessa program är att ifall de inte än har fått den frågan som du ställt till den och den inte vet vad den ska svara hittar den på något som är liknande och detta kan leda till falsk information. <br><br>
+            Under de två senaste åren (2023-2025) har även AI-videor utvecklats extremt. För bara två år sedan kunde man se väldigt tydligt om en video var AI generad, nu för tiden finns det AI videor som ibland är väldigt svårt att se att den är genererad om man bara kollar på hur videon ser ut. Självklart kan man förstå om en video är AI generad genom att tänka logiskt och höra hur en person låter eller vad den säger men tanken på att det utvecklats så mycket under de två senaste åren är lite otäckt. Tänk om 10 år, då kommer kanske inte övervakningskameror vara till någon nytta då brottslingar kan skylla på AI.
 
-</p>
-    </div>
+            </p>
+        </article>
+    </main>
 </body>
 </html>
